search bar fixed on mobile

--- a/app/design/frontend/Homescapes/Develop/Mirasvit_SearchAutocomplete/web/css/source/module/_autocomplete.less
+++ b/app/design/frontend/Homescapes/Develop/Mirasvit_SearchAutocomplete/web/css/source/module/_autocomplete.less
@@ -23,6 +23,7 @@
         min-height: 3.5rem;
         z-index: 1000;
         text-align: left;
+		line-height: 2rem;
 
         &._active {
             display: block !important;
